Tmux true color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,8 +6,22 @@ set -g pane-base-index 1
 # NVIM Settings
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm:Tc'
+
+set -as terminal-overrides ",xterm*:Tc"
+
+set-option -g set-titles on
+set-option -g set-titles-string "#S / #W"
+
+
+#set -g mouse on
+set -g set-clipboard off
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xsel -b"
+bind-key -n -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -b"
+set-window-option -g mode-keys vi
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -b"
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 
 # List of plugins
