--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,8 @@ set -g pane-base-index 1
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+set -g default-terminal "xterm-24bit"
+set -g terminal-overrides ',xterm-24bit:Tc'
 set -as terminal-overrides ",xterm*:Tc"
 
 set-option -g set-titles on
