--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,11 @@ set -g pane-base-index 1
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# set -g default-terminal "tmux-256color"
+# set-option -sa terminal-features ",xterm*:RGB"
+# set-option -ga terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-features ",alacritty:RGB"
+set-option -ga terminal-overrides ",alacritty:Tc"
 set -g default-terminal "xterm-24bit"
 set -g terminal-overrides ',xterm-24bit:Tc'
 set -as terminal-overrides ",xterm*:Tc"
